# python-cli-template

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: code-quality.yml  coverage.yml  template-chassis.yml  tests.yml
docs/: index.md  log.md
docs/adr/: index.md
docs/specs/: index.md
scripts/: check-env.py  create-project  rename-project
src/skeleton_cli/: __init__.py  cli.py
src/skeleton_cli/agents/: base.py
src/skeleton_cli/config/: settings.py
src/skeleton_cli/core/: fileset.py  models.py  ports.py
src/skeleton_cli/providers/: anthropic.py  echo.py  openai.py  registry.py
src/skeleton_cli/runtime/: factory.py
tests/: test_agent.py  test_anthropic_provider.py  test_check_env.py  test_cli.py  test_create_project.py  test_factory.py  test_fileset.py  test_openai_provider.py  test_repo_health.py  test_settings.py
